# dolphindb-agent-skills

./: .gitignore  MANIFEST.in  README.md  README_CN.md  plugin.json  pyproject.toml  upload_to_pypi.py
scripts/: smoke_test.sh
skills/dolphindb/: SKILL.md
skills/dolphindb-runtime/: SKILL.md
skills/dolphindb/docs/: 00-overview.md  00.overview.md  01-quickstart.md  01.quick-start.md  02.data-types.md  03.scripting.md  04.sql.md  05.distributed-tables.md  06.in-memory-tables.md  07.streaming.md  08.functions.md  09.python-api.md  10.java-api.md  11.cpp-api.md  12.data-import.md  13.performance.md  14.admin.md  README.md  cheatsheet.md  cn-keywords.md  third_party.md  upstream-index.md
skills/dolphindb/docs/10-language/: README.md  anonym_func.md  application.md  attributes.md  class_objects.md  closure.md  dict.md  (+28 more)
skills/dolphindb/evals/: HOW-TO-MEASURE.md  README.md  run.md  scoring.md
skills/dolphindb/examples/: README.md  backtest-future.dos  backtest-option.dos  backtest-quickstart.dos  create-dfs-and-load.dos  parquet-roundtrip.dos  python-api-quickstart.py  stream-reactive-engine.dos  tick-to-ohlc.dos
skills/dolphindb/patterns/: README.md  asof-join-quotes-trades.md  backtest-signal-to-order.md  partition-design.md  python-roundtrip-type-safety.md  scheduled-job-template.md  stream-ingestion-to-dfs.md  stream-recovery-after-restart.md  tick-to-ohlc.md  upsert-via-pkey.md
skills/dolphindb/reference/: README.md  plugins-catalog.md
skills/dolphindb/scripts/: README.md  build_from_docs.py  lookup.py  run_evals.py
src/dolphindb_skill_installer/: main.py
(+2828 files in other folders)
